--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -198,7 +198,7 @@
     "share_health_status": "Поделиться состоянием здоровья ",
     "share_health_status_info_from_journal": "Это позволит поделиться информацией о состоянии вашего здоровья из вашего журнала, чтобы врач мог одобрить ваш запрос на рецепт.",
     "see_list_shared_info": "См. раздел о предоставлении доступа к информации",
-    "share_ur_jounral_status": "Поделиться данными о состоянии здоровья с врачом",
+    "share_ur_jounral_status": "Добавить этого врача в список моих частных врачей",
     "country_u_live": "Страна, в которой вы живете",
     "dieseases_etc": "Болезни (сердце, злокачественные, легочные, мышечные и так далее...)",
     "allergies": "Аллергии",
@@ -1194,6 +1194,7 @@
     "showOnlyOverview" : "Показать только обзор",
     "view_demo":"Посмотреть демо",
     "SMSEmailLanguage" :"Язык SMS / электронной почты",
-    "Noimageavailable" : "Изображение отсутствует"
+    "Noimageavailable" : "Изображение отсутствует",
+    "Prescriptionsuccessfullysent" :"Рецепт успешно отправлен"
   }
 }
