new changes related to trello

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -613,7 +613,7 @@
 		"user_is_blocked": "Benutzer ist gesperrt",
 		"wrong_password": "Falsches Passwort",
 		"capab_Doctors": "Ärztin",
-		"capab_Patients": "Geduldig",
+		"capab_Patients": "Patienten",
 		"Nurse": "Krankenschwester",
 		"capab_Doctors1": "Ärzte/-innen",
 		"capab_Patients1": "Patient",
@@ -1189,7 +1189,7 @@
 		"appointment_can_be_cancelled" : "Termin kann abgesagt werden:",
 		"notmore24": "Bitte geben Sie weniger als 24 Stunden ein",
 		"NotAvailable":"Nicht verfügbar",
-		"Seemore10entries" : "Weitere 10 Einträge anzeigen",
+		"Seemore10entries" : "Weitere 20 Einträge anzeigen",
 		"showOnlyOverview" : "Nur Übersicht anzeigen",
 		"view_demo":"Demo anzeigen",
 		"SMSEmailLanguage" :"SMS / E-Mail-Sprache",
