fixed cancel apponitment subspeciality order

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -574,7 +574,7 @@
 		"appointment_system": "Terminsystem",
 		"offer_practice_online_appointment": "Bieten Sie Übung und Online-Termin mit",
 		"copy_time_to_all": "Kopieren Sie die Zeit an alle",
-		"set_timeslot_duration": "Zeitschlitzdauer einstellen:",
+		"set_timeslot_duration": "Termindauer einstellen:",
 		"break_time": "Pause:",
 		"appointment_can_be_booked": "Termin kann gebucht werden:",
 		"up_to_days": "Bis zu Tagen",
@@ -1093,7 +1093,7 @@
 		"holidays": "Ferien",
 		"set_working_hours": "Online-Arbeitszeiten einstellen",
 		"time_slots": "Zeitfenster",
-		"Timeslot_duration": "Zeitschlitzdauer",
+		"Timeslot_duration": "Termindauer",
 		"Break_time_from": "Pausenzeit von",
 		"Break_time_to": "Pausenzeit zu",
 		"up_to": "Bis zu",
