all new trello issues related spelling

--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -474,7 +474,7 @@
 		"my_doc": "My Documents",
 		"prescription": "Prescription",
 		"sick_cert": "Sick Certificate",
-		"inquiry": "inquiry",
+		"inquiry": "Inquiry",
 		"for_sick_cert_req_doc": "For Sick certificate request Doctor is required",
 		"for_pres_req_doc_require": "For Precription request Doctor is required",
 		"share_health_status": "Share Health Status",
@@ -664,7 +664,7 @@
 		"team": "Team",
 		"example_entry_of_journal_timline_etc": "This is an example entry on your journal timeline. All entries, such as “Diagnosis”, “Doctor visits”, “Laboratory results” and more, will appear here.",
 		"date_of_dieses_patient": "Date of disease onset (Patient)",
-		"date_of_death": "Date of Death (if applicable)",
+		"date_of_death": "Date of death (If applicable)",
 		"disease_name": "Disease Name",
 		"gender_of_relatives": "Gender of relative",
 		"relation_of_relative": "Relation with relative",
