Revert "all new trello issues related spelling"
This reverts commit 3c9d6470758cb426ac38d8b6d77686459d3a69ba.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -191,7 +191,7 @@
 		"my_doc": "My Documents",
 		"prescription": "Prescription",
 		"sick_cert": "Sick Certificate",
-		"inquiry": "Inquiry",
+		"inquiry": "inquiry",
 		"for_sick_cert_req_doc": "For Sick certificate request Doctor is required",
 		"for_pres_req_doc_require": "For Precription request Doctor is required",
 		"share_health_status": "Share Health Status",
@@ -299,7 +299,7 @@
 		"stay_upto_date_orgnize_data": "Stay up to date and let Aimedis organize your medical data",
 		"available": "Available",
 		"activate": "Activate",
-		"secnd_openion": "Second opinion",
+		"secnd_openion": "Second Opinion",
 		"emrgancy_patient_data": "Emergency Patient Data",
 		"online_course": "Online Courses",
 		"online": "Online",
@@ -384,8 +384,8 @@
 		"team": "Team",
 		"example_entry_of_journal_timline_etc": "This is an example entry on your journal timeline. All entries, such as “Diagnosis”, “Doctor visits”, “Laboratory results” and more, will appear here.",
 		"date_of_dieses_patient": "Date of disease onset (Patient)",
-		"date_of_death": "Date of death (If applicable)",
-		"disease_name": "Disease name",
+		"date_of_death": "Date of Death (if applicable)",
+		"disease_name": "Disease Name",
 		"gender_of_relatives": "Gender of relative",
 		"relation_of_relative": "Relation with relative",
 		"all_time": "All time",
@@ -981,7 +981,7 @@
 		"pharmacy_access":"Pharmacy Access",
 		"cart_removed":"Item removed successfully",
 		"pay_with":"Pay with",
-		"full_report":"Full report",
+		"full_report":"Full Report",
 		"item_added_to_wishlist":"Item successfully added to wishlist",
 		"item_present_in_cart":"Item already present in cart",
 		"previous_lesson":"Previous lesson",
@@ -1192,7 +1192,7 @@
 		"notmore24": "Please enter less than 24 hours",
 		"NotAvailable":"Not available",
 		"Seemore10entries" : "See more 20 entries",
-		"showOnlyOverview" : "Show only overview",
+		"showOnlyOverview" : "Show Only Overview",
 		"view_demo":"View demo",
 		"SMSEmailLanguage" :"SMS / Email Language",
 		"Noimageavailable" : "No image available",
