--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -968,7 +968,7 @@
 		"dearchive_entry_q": "Do you really want to dearchive this entry",
 		"delete_for_msg": "Do you really want to delete this entry? This means it will be deleted forever.",
 		"make_personilized_acc": "To make personalise your account, add your profile photo. It will only be visible to you and people in your group of trusted people.",
-		
+		"language_all":"Language: All",
 		"rmv_entry": "remove entry",
 		"download_journal_report": "DOWNLOAD JOURNAL REPORT",
 		"ur_emrgancy_access": "Your Emergency Access",
