--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -229,7 +229,7 @@
 		"manufacturer": "Imalatçı",
 		"pack_size": "Paket ölçüsü",
 		"select": "Seç",
-		"status": "Status",
+		"status": "Durum",
 		"sent": "Gönder",
 		"on": "-de",
 		"request": "Başvuru",
@@ -286,7 +286,8 @@
 		"created_by": "Tarafından yapılmış",
 		"time_created": "Zaman ayarlandı",
 		"ur_emergancy_data": "Ilk yardım bilgilerin",
-		"extra": "Extra",
+		"extra": "Ekstra",
+		"language_all":"Dil: Tümü",
 		"srvc": "Hizmet",
 		"activated": "Açık",
 		"past_apointment": "Geçmiş terminler",
@@ -303,7 +304,7 @@
 		"emrgancy_patient_data": "Acil hasta bilgileri",
 		"online_course": "Online Kurslar",
 		"online": "Online",
-		"extra_srvc": "Extra Hizmetler",
+		"extra_srvc": "Ekstra Hizmetler",
 		"jrnl_archive": "Günlük arşivi",
 		"doc_require_for_second_openion": "Ikinci bir görüş isteği icin doktor gerekiyor",
 		"specilist_and_secnd_openion": "Uzman ve standart sorular",
@@ -495,7 +496,7 @@
 		"all_course": "Bütün kurslar",
 		"my_course": "Benim kurslarim",
 		"new_course": "Yeni kurslar",
-		"topic_all": "Dil: Hepsi",
+		"topic_all": "Konu: Hepsi",
 		"language_eng": "Dil: Ingilizce",
 		"what_diabetes": "Diyabet nedir",
 		"add_to_cart": "Sepete ekle",
