--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1217,6 +1217,9 @@
 		"Noimageavailable" : "没有可用的图像",
 		"Prescriptionsuccessfullysent" :"处方发送成功",
 		"currencyLang":"货币",
-		"choose_currency":"选择货币"
+		"choose_currency":"选择货币",
+		"cancel_subscription":"取消订阅",
+		"r_u_want_cancel_sub":"您真的要取消订阅吗？",
+		"email_rcv_update_reciept":"通过电子邮件发送您的最新动态和收据"
 	}
 }
