--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1200,6 +1200,9 @@
 		"Noimageavailable" : "No hay imagen disponible",
 		"Prescriptionsuccessfullysent" :"Receta enviada con éxito",
 		"currencyLang":"Divisa",
-		"choose_currency":"Elegir Moneda"
+		"choose_currency":"Elegir Moneda",
+		"cancel_subscription":"Cancelar la suscripción",
+		"r_u_want_cancel_sub":"¿Realmente quieres cancelar la suscripción?",
+		"email_rcv_update_reciept":"Correo electrónico en el que recibirá actualizaciones y recibos"
 	}
 }
