--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1824,6 +1824,7 @@
 		"choose_currency":"Kies valuta",
 		"cancel_subscription":"Annuleer het abonnement",
 		"r_u_want_cancel_sub":"Wil je het abonnement echt opzeggen?",
-		"email_rcv_update_reciept":"E-mail waarop u updates en ontvangstbewijzen ontvangt"
+		"email_rcv_update_reciept":"E-mail waarop u updates en ontvangstbewijzen ontvangt",
+		"upload_license_is" :"Geüploade licentie is"
 	}
 }
