--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1200,6 +1200,7 @@
 		"choose_currency":"Выберите Валюту",
     "cancel_subscription":"Отменить подписку",
 		"r_u_want_cancel_sub":"Вы действительно хотите отменить подписку?",
-    "email_rcv_update_reciept":"По электронной почте вы будете получать обновления и квитанции на"
+    "email_rcv_update_reciept":"По электронной почте вы будете получать обновления и квитанции на",
+    "upload_license_is" :"Загруженная лицензия"
   }
 }
