--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -1233,6 +1233,7 @@
 		"choose_currency":"Chagua Sarafu",
 		"cancel_subscription":"Ghairi usajili",
 		"r_u_want_cancel_sub":"Je! Kweli unataka kughairi usajili?",
-		"email_rcv_update_reciept":"Barua pepe utasikia sasisho na risiti kwenye"
+		"email_rcv_update_reciept":"Barua pepe utasikia sasisho na risiti kwenye",
+		"upload_license_is" :"Leseni iliyopakiwa ni"
 	}
 }
