--- a/src/translations/tr.json
+++ b/src/translations/tr.json
@@ -1201,6 +1201,7 @@
 		"choose_currency":"Para Birimini Seç",
 		"cancel_subscription":"Aboneliği iptal et",
 		"r_u_want_cancel_sub":"Aboneliği gerçekten iptal etmek istiyor musunuz?",
-		"email_rcv_update_reciept":"Güncellemeleri ve makbuzları alacağınız e-posta"
+		"email_rcv_update_reciept":"Güncellemeleri ve makbuzları alacağınız e-posta",
+		"upload_license_is" :"Yüklenen lisans"
 	}
 }   
