--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1194,6 +1194,7 @@
 		"choose_currency":"اختر العملة",
 		"cancel_subscription":"إلغاء الاشتراك",
 		"r_u_want_cancel_sub":"هل تريد حقًا إلغاء الاشتراك؟",
-		"email_rcv_update_reciept":"البريد الإلكتروني الذي ستتلقى فيه التحديثات والإيصالات"
+		"email_rcv_update_reciept":"البريد الإلكتروني الذي ستتلقى فيه التحديثات والإيصالات",
+		"upload_license_is" :"الرخصة التي تم تحميلها هي"
 		}
 }
