--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1199,6 +1199,7 @@
 		"choose_currency":"Währung wählen",
 		"cancel_subscription":"Kündigen Sie das Abonnement",
 		"r_u_want_cancel_sub":"Möchten Sie das Abonnement wirklich kündigen?",
-		"email_rcv_update_reciept":"E-Mail erhalten Sie Updates und Quittungen auf"
+		"email_rcv_update_reciept":"E-Mail erhalten Sie Updates und Quittungen auf",
+		"upload_license_is" :"Hochgeladene Lizenz ist"
 	}
 }
