--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1214,6 +1214,7 @@
 		"choose_currency":"Escolha a moeda",
 		"cancel_subscription":"Cancelar a assinatura",
 		"r_u_want_cancel_sub":"Tem certeza de que deseja cancelar a assinatura?",
-		"email_rcv_update_reciept":"E-mail em que você receberá atualizações e recibos"
+		"email_rcv_update_reciept":"E-mail em que você receberá atualizações e recibos",
+		"upload_license_is" :"Licença carregada é"
 	}
 }
